{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 430,
  "lineage": "aea339ec-94e0-ddbc-f23f-225a3eeae85e",
  "resources": [
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:170542423458:loadbalancer/app/iac1-alb/0c1aa3154381a336",
            "arn_suffix": "app/iac1-alb/0c1aa3154381a336",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "iac1-alb-434208646.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:170542423458:loadbalancer/app/iac1-alb/0c1aa3154381a336",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "iac1-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02cd7ddd5a9e2f8ff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0229624a8122e34c8"
              },
              {
                "subnet_id": "subnet-0d1615cc32597875b"
              }
            ],
            "subnets": [
              "subnet-0229624a8122e34c8",
              "subnet-0d1615cc32597875b"
            ],
            "tags": {
              "Name": "iac1-alb"
            },
            "tags_all": {
              "Name": "iac1-alb"
            },
            "vpc_id": "vpc-0c12f72243f6e576a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public_a",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:170542423458:listener/app/iac1-alb/0c1aa3154381a336/285e490312827d0f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:170542423458:targetgroup/iac1-tg/4faafeff397a32ca",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:170542423458:listener/app/iac1-alb/0c1aa3154381a336/285e490312827d0f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:170542423458:loadbalancer/app/iac1-alb/0c1aa3154381a336",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.loadbalancer.aws_lb.main",
            "module.loadbalancer.aws_lb_target_group.app",
            "module.network.aws_subnet.public_a",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:170542423458:targetgroup/iac1-tg/4faafeff397a32ca",
            "arn_suffix": "targetgroup/iac1-tg/4faafeff397a32ca",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health/readiness",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:170542423458:targetgroup/iac1-tg/4faafeff397a32ca",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-3:170542423458:loadbalancer/app/iac1-alb/0c1aa3154381a336"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "iac1-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "iac1-tg"
            },
            "tags_all": {
              "Name": "iac1-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c12f72243f6e576a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d53a5192c7d09adf",
            "arn": "arn:aws:ec2:eu-west-3:170542423458:elastic-ip/eipalloc-0d53a5192c7d09adf",
            "association_id": "eipassoc-08600b7691bfd52c8",
            "domain": "vpc",
            "id": "eipalloc-0d53a5192c7d09adf",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-02d2f31e0d9919895",
            "private_dns": "ip-10-0-1-64.eu-west-3.compute.internal",
            "private_ip": "10.0.1.64",
            "public_dns": "ec2-35-180-220-4.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.220.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "iac1-nat-eip"
            },
            "tags_all": {
              "Name": "iac1-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:170542423458:internet-gateway/igw-014a80900816ef114",
            "id": "igw-014a80900816ef114",
            "owner_id": "170542423458",
            "tags": {
              "Name": "iac1-igw"
            },
            "tags_all": {
              "Name": "iac1-igw"
            },
            "vpc_id": "vpc-0c12f72243f6e576a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d53a5192c7d09adf",
            "association_id": "eipassoc-08600b7691bfd52c8",
            "connectivity_type": "public",
            "id": "nat-0108fa10f19db2c34",
            "network_interface_id": "eni-02d2f31e0d9919895",
            "private_ip": "10.0.1.64",
            "public_ip": "35.180.220.4",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0229624a8122e34c8",
            "tags": {
              "Name": "iac1-nat"
            },
            "tags_all": {
              "Name": "iac1-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:170542423458:route-table/rtb-041f91a879ce90653",
            "id": "rtb-041f91a879ce90653",
            "owner_id": "170542423458",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0108fa10f19db2c34",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iac1-rt-private-app"
            },
            "tags_all": {
              "Name": "iac1-rt-private-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c12f72243f6e576a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:170542423458:route-table/rtb-0de9168414f72c0bd",
            "id": "rtb-0de9168414f72c0bd",
            "owner_id": "170542423458",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "iac1-rt-private-data"
            },
            "tags_all": {
              "Name": "iac1-rt-private-data"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c12f72243f6e576a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:170542423458:route-table/rtb-0865c101e2108f051",
            "id": "rtb-0865c101e2108f051",
            "owner_id": "170542423458",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014a80900816ef114",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iac1-rt-public-app"
            },
            "tags_all": {
              "Name": "iac1-rt-public-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c12f72243f6e576a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdbf291130833392",
            "route_table_id": "rtb-041f91a879ce90653",
            "subnet_id": "subnet-078613325ac97d79f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private_app",
            "module.network.aws_subnet.private_app_a",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0708a2e084d94fef2",
            "route_table_id": "rtb-041f91a879ce90653",
            "subnet_id": "subnet-0d1dd359bc736e19d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private_app",
            "module.network.aws_subnet.private_app_b",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0815d6d1718a0fd94",
            "route_table_id": "rtb-0de9168414f72c0bd",
            "subnet_id": "subnet-00a4a1c3dbd7a50eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.private_data",
            "module.network.aws_subnet.private_data_a",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e88447277fdecf98",
            "route_table_id": "rtb-0de9168414f72c0bd",
            "subnet_id": "subnet-0a2d7e3f4ad400347"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.private_data",
            "module.network.aws_subnet.private_data_b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec9b7207edaa3b75",
            "route_table_id": "rtb-0865c101e2108f051",
            "subnet_id": "subnet-0229624a8122e34c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public_app",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8120d477ce87cbe",
            "route_table_id": "rtb-0865c101e2108f051",
            "subnet_id": "subnet-0d1615cc32597875b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public_app",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:170542423458:subnet/subnet-078613325ac97d79f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078613325ac97d79f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "170542423458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iac1-private-app-a"
            },
            "tags_all": {
              "Name": "iac1-private-app-a"
            },
            "vpc_id": "vpc-0c12f72243f6e576a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:170542423458:subnet/subnet-0d1dd359bc736e19d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1dd359bc736e19d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "170542423458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iac1-private-app-b"
            },
            "tags_all": {
              "Name": "iac1-private-app-b"
            },
            "vpc_id": "vpc-0c12f72243f6e576a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:170542423458:subnet/subnet-00a4a1c3dbd7a50eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a4a1c3dbd7a50eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "170542423458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iac1-private-data-a"
            },
            "tags_all": {
              "Name": "iac1-private-data-a"
            },
            "vpc_id": "vpc-0c12f72243f6e576a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:170542423458:subnet/subnet-0a2d7e3f4ad400347",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2d7e3f4ad400347",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "170542423458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iac1-private-data-b"
            },
            "tags_all": {
              "Name": "iac1-private-data-b"
            },
            "vpc_id": "vpc-0c12f72243f6e576a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:170542423458:subnet/subnet-0229624a8122e34c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0229624a8122e34c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "170542423458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iac1-public-a"
            },
            "tags_all": {
              "Name": "iac1-public-a"
            },
            "vpc_id": "vpc-0c12f72243f6e576a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:170542423458:subnet/subnet-0d1615cc32597875b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1615cc32597875b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "170542423458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iac1-public-b"
            },
            "tags_all": {
              "Name": "iac1-public-b"
            },
            "vpc_id": "vpc-0c12f72243f6e576a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:170542423458:vpc/vpc-0c12f72243f6e576a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04548e5318f41426c",
            "default_route_table_id": "rtb-0386649de30b2770b",
            "default_security_group_id": "sg-022468e01696e2d20",
            "dhcp_options_id": "dopt-030e49bb7b7c8455a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c12f72243f6e576a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0386649de30b2770b",
            "owner_id": "170542423458",
            "tags": {
              "Name": "iac1-vpc"
            },
            "tags_all": {
              "Name": "iac1-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:170542423458:security-group/sg-02cd7ddd5a9e2f8ff",
            "description": "Allow HTTP from internet to load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02cd7ddd5a9e2f8ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "iac1-sg-alb",
            "name_prefix": "",
            "owner_id": "170542423458",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iac1-sg-alb"
            },
            "tags_all": {
              "Name": "iac1-sg-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c12f72243f6e576a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:170542423458:security-group/sg-01fb576cfdf76ec7f",
            "description": "Allow traffic from ALB to app servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01fb576cfdf76ec7f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "App port from ALB only",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02cd7ddd5a9e2f8ff"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "iac1-sg-app",
            "name_prefix": "",
            "owner_id": "170542423458",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iac1-sg-app"
            },
            "tags_all": {
              "Name": "iac1-sg-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c12f72243f6e576a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.alb"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:170542423458:security-group/sg-083e2ab13269dc4b7",
            "description": "Allow MySQL from app servers only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083e2ab13269dc4b7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from app servers only",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01fb576cfdf76ec7f"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "iac1-sg-rds",
            "name_prefix": "",
            "owner_id": "170542423458",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iac1-sg-rds"
            },
            "tags_all": {
              "Name": "iac1-sg-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c12f72243f6e576a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.app"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:170542423458:security-group/sg-09e7ee7671e92b53a",
            "description": "Allow Redis from app servers only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e7ee7671e92b53a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from app servers only",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01fb576cfdf76ec7f"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "iac1-sg-redis",
            "name_prefix": "",
            "owner_id": "170542423458",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iac1-sg-redis"
            },
            "tags_all": {
              "Name": "iac1-sg-redis"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c12f72243f6e576a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.app"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}